--- a/animation.html
+++ b/animation.html
@@ -7,16 +7,17 @@
     <title>BCS Card</title>
     <meta name="theme-color" content="#fff">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Borg Creative Studios">
     <meta property="og:type" content="website">
     <meta name="twitter:description" content="Our team develops software, produces video games, and creates digital media resources.">
-    <meta name="twitter:image" content="assets/img/bcs-card.jpg">
-    <meta name="description" content="Shareable, digital business cards">
+    <meta name="twitter:image" content="assets/img/animation.png">
     <meta property="og:image" content="assets/img/bcs-card.jpg">
+    <meta name="description" content="Shareable, digital business cards">
+    <meta name="twitter:title" content="Animation">
     <link rel="icon" type="image/png" sizes="3000x3000" href="assets/img/IMG_1352.png">
     <link rel="icon" type="image/png" sizes="3000x3000" href="assets/img/IMG_1352.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
+    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="assets/css/styles.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
