--- a/interactive.html
+++ b/interactive.html
@@ -8,15 +8,16 @@
     <meta name="theme-color" content="#fff">
     <meta property="og:image" content="assets/img/BCS_twitter.jpg">
     <meta property="og:type" content="website">
-    <meta name="twitter:description" content="A new web browser for MacOS.">
-    <meta name="twitter:image" content="assets/img/fruity-banner.png">
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Fruity">
+    <meta name="twitter:title" content="Interactive">
     <meta name="description" content="Our interactive entertainment projects include digital quizzes, video games, and website guides.">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:image" content="">
+    <meta name="twitter:description" content="Interactive web technologies, video games, augmented reality, and more.">
     <link rel="icon" type="image/png" sizes="3000x3000" href="assets/img/IMG_1352.png">
     <link rel="icon" type="image/png" sizes="3000x3000" href="assets/img/IMG_1352.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
+    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="assets/css/styles.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
