--- a/webproducts.html
+++ b/webproducts.html
@@ -4,19 +4,20 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home</title>
+    <title>Web Products</title>
     <meta name="theme-color" content="#fff">
     <meta property="og:image" content="assets/img/BCS_twitter.jpg">
     <meta name="twitter:image" content="assets/img/IMG_1347.jpg">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Borg Creative Studios">
     <meta property="og:type" content="website">
-    <meta name="description" content="Our team develops software, produces video games, and creates digital media resources.">
     <meta name="twitter:description" content="Our team develops software, produces video games, and creates digital media resources.">
+    <meta name="description" content="BCS Author, BCS Marketing, and more.">
     <link rel="icon" type="image/png" sizes="3000x3000" href="assets/img/IMG_1352.png">
     <link rel="icon" type="image/png" sizes="3000x3000" href="assets/img/IMG_1352.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
+    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="assets/css/styles.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
