--- a/softwareproducts.html
+++ b/softwareproducts.html
@@ -73,7 +73,7 @@
                 <div class="text-center">
                     <h2 class="text-white">Fruity Web Browser</h2>
                     <p class="text-white">Minimalist web browsing for MacOS.</p>
-                    <p class="text-white" style="margin-bottom: 0px;"><a href="fruity.html">learn more</a></p><img src="assets/img/lemon.png" style="min-width: 250px;max-width: 70%;">
+                    <p class="text-white" style="margin-bottom: 0px;"><a href="fruity.html">learn more</a></p><img src="assets/img/fruity-pineapple-promo1.png" style="min-width: 250px;max-width: 70%;">
                 </div>
             </div><!-- End: web design -->
             <!-- Start: Fruity -->
