Bye Bye spooky season D;

--- a/page12.html
+++ b/page12.html
@@ -70,6 +70,7 @@
         <section data-bss-parallax-bg="true" class="clean-block clean-hero" style="color: rgba(0,0,0,0.31);background: url(&quot;assets/img/bcs-cover.jpg&quot;);border-style: none;filter: saturate(100%);">
             <div class="text">
                 <h1>BCS Marketing</h1>
+                <p>Reach communities, not just individuals.</p>
             </div>
         </section>
         <section class="clean-block clean-info dark" style="text-align: center;background: #f6f6f6;">
@@ -92,24 +93,66 @@
                             <div class="col-sm-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" class="device" src="assets/img/contactcard.png" style="width: 100%;"></div>
                         </div>
                     </div>
+                    <div>
+                        <ul class="nav nav-tabs" role="tablist">
+                            <li class="nav-item" role="presentation"><a class="nav-link" role="tab" data-bs-toggle="tab" href="#tab-1">Tab 1</a></li>
+                            <li class="nav-item" role="presentation"><a class="nav-link" role="tab" data-bs-toggle="tab" href="#tab-2">Tab 2</a></li>
+                            <li class="nav-item" role="presentation"><a class="nav-link active" role="tab" data-bs-toggle="tab" href="#tab-3">Tab 3</a></li>
+                        </ul>
+                        <div class="tab-content">
+                            <div class="tab-pane" role="tabpanel" id="tab-1">
+                                <div class="row">
+                                    <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/adviews.png" style="width: 100%;">
+                                        <h3>Where are ads distributed?</h3>
+                                        <p>We distribute your ads to blogs, news sites, software sites, social media affiliates, and more.</p>
+                                    </div>
+                                    <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/check.png" style="width: 100%;">
+                                        <h3>How are ads moderated?</h3>
+                                        <p>All ads are inspected prior to launching in order to verify that they meet our content&nbsp;guidelines.</p>
+                                    </div>
+                                    <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/data.png" style="width: 100%;">
+                                        <h3>How is advertising data managed?</h3>
+                                        <p>We keep all data secure and private. The small amount of data recorded is done so <a href="page13.html">anonymously</a>!</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="tab-pane" role="tabpanel" id="tab-2">
+                                <div class="row">
+                                    <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/adviews.png" style="width: 100%;">
+                                        <h3>Where are ads distributed?</h3>
+                                        <p>We distribute your ads to blogs, news sites, software sites, social media affiliates, and more.</p>
+                                    </div>
+                                    <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/check.png" style="width: 100%;">
+                                        <h3>How are ads moderated?</h3>
+                                        <p>All ads are inspected prior to launching in order to verify that they meet our content&nbsp;guidelines.</p>
+                                    </div>
+                                    <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/data.png" style="width: 100%;">
+                                        <h3>How is advertising data managed?</h3>
+                                        <p>We keep all data secure and private. The small amount of data recorded is done so <a href="page13.html">anonymously</a>!</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="tab-pane active" role="tabpanel" id="tab-3">
+                                <div class="row">
+                                    <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/adviews.png" style="width: 100%;">
+                                        <h3>Where are ads distributed?</h3>
+                                        <p>We distribute your ads to blogs, news sites, software sites, social media affiliates, and more.</p>
+                                    </div>
+                                    <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/check.png" style="width: 100%;">
+                                        <h3>How are ads moderated?</h3>
+                                        <p>All ads are inspected prior to launching in order to verify that they meet our content&nbsp;guidelines.</p>
+                                    </div>
+                                    <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/data.png" style="width: 100%;">
+                                        <h3>How is advertising data managed?</h3>
+                                        <p>We keep all data secure and private. The small amount of data recorded is done so <a href="page13.html">anonymously</a>!</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </section><!-- End: Highlight Phone -->
             </div><!-- Start: 1 Row 3 Columns -->
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/adviews.png" style="width: 100%;">
-                        <h3>Where are ads distributed?</h3>
-                        <p>We distribute your ads to blogs, news sites, software sites, social media affiliates, and more.</p>
-                    </div>
-                    <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/check.png" style="width: 100%;">
-                        <h3>How are ads moderated?</h3>
-                        <p>All ads are inspected prior to launching in order to verify that they meet our content&nbsp;guidelines.</p>
-                    </div>
-                    <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/data.png" style="width: 100%;">
-                        <h3>How is advertising data managed?</h3>
-                        <p>We keep all data secure and private. The small amount of data recorded is done so <a href="page13.html">anonymously</a>!</p>
-                    </div>
-                </div>
-            </div><!-- End: 1 Row 3 Columns -->
+            <div class="container"></div><!-- End: 1 Row 3 Columns -->
             <!-- Start: Contact Form Clean -->
             <section class="contact-clean" style="background: #fff;"><div><iframe src="https://cloud.borgcreative.com/survey/index.php/571684?lang=en" width="100%" height="500"
     frameborder="0" marginheight="0" marginwidth="0" title="BCS Marketing Setup"></iframe></div></section><!-- End: Contact Form Clean -->
