--- a/index.html
+++ b/index.html
@@ -136,7 +136,12 @@
             <footer class="footer-basic">
                 <!-- Start: Social Icons -->
                 <div class="social"><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://www.instagram.com/borgcreativestudios/" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-instagram"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://twitter.com/borgcreative" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-twitter"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://www.minds.com/borgcreative/" target="_blank" style="border-radius: 5px;"><i class="icon ion-ios-lightbulb"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://gamejolt.com/@borgcreative" target="_blank" style="border-radius: 5px;"><i class="icon ion-ios-bolt"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://www.facebook.com/borgcreativestudios/" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-facebook"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://www.gettr.com/user/borgcreative" target="_blank" style="border-radius: 5px;"><i class="icon ion-fireball"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://codeberg.org/Borg-Creative-Studios" target="_blank" style="border-radius: 5px;"><i class="icon ion-code"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://github.com/Borg-Creative-Studios" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-github"></i></a></div><!-- End: Social Icons -->
-                <!-- Start: Links -->
+                <div class="d-md-flex justify-content-md-center align-items-md-center"><center>
+    <img src="https://api.thegreenwebfoundation.org/greencheckimage/www.borgcreative.com?nocache=true" alt="This website is hosted Green - checked by thegreenwebfoundation.org">
+
+</center>
+
+</div><!-- Start: Links -->
                 <ul class="list-inline">
                     <li class="list-inline-item"><a href="index.html">Home</a></li>
                     <li class="list-inline-item"><a href="services.html">Services</a></li>
