Updated the footers

--- a/interactive.html
+++ b/interactive.html
@@ -157,6 +157,7 @@
             <ul class="list-inline">
                 <li class="list-inline-item"><a href="index.html">Home</a></li>
                 <li class="list-inline-item"><a href="services.html">Services</a></li>
+                <li class="list-inline-item"><a href="https://open.borgcreative.com/projects.html" target="_blank">Open Source</a></li>
                 <li class="list-inline-item"><a href="about.html">About</a></li>
                 <li class="list-inline-item"><a href="accountterms.html">Terms</a></li>
                 <li class="list-inline-item"><a href="privacy.html">Privacy Policy</a></li>
