--- a/bcs-card.html
+++ b/bcs-card.html
@@ -118,7 +118,9 @@
 <iframe src="https://cloud.borgcreative.com/survey/index.php/529968?newtest=Y&lang=en" width="100%" height="500"
     frameborder="0" marginheight="0" marginwidth="0" title="BCS Card Setup"></iframe>
 
-</div></div><!-- End: BCS Form -->
+</div>
+                    <p><a href="https://cloud.borgcreative.com/survey/index.php/529968?newtest=Y&amp;lang=en" target="_blank">Open form in tab</a></p>
+                </div><!-- End: BCS Form -->
             </section><!-- End: Contact Form Clean -->
         </section>
     </main>
