New footer! Updated About and Values pages! New press center!

--- a/press.html
+++ b/press.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>BCS Card</title>
+    <title>About Us</title>
     <meta name="theme-color" content="#fff">
+    <meta property="og:image" content="assets/img/BCS_twitter.jpg">
+    <meta name="twitter:image" content="assets/img/IMG_1347.jpg">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Borg Creative Studios">
     <meta property="og:type" content="website">
     <meta name="twitter:description" content="Our team develops software, produces video games, and creates digital media resources.">
-    <meta name="twitter:image" content="assets/img/bcs-card.jpg">
-    <meta name="description" content="Shareable, digital business cards">
-    <meta property="og:image" content="assets/img/bcs-card.jpg">
+    <meta name="description" content="">
     <link rel="icon" type="image/png" sizes="3000x3000" href="assets/img/IMG_1352.png">
     <link rel="icon" type="image/png" sizes="3000x3000" href="assets/img/IMG_1352.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -68,60 +68,18 @@
     </nav>
     <main class="page landing-page">
         <section data-bss-parallax-bg="true" class="clean-block clean-hero" style="color: rgba(0,0,0,0.31);background: url(&quot;assets/img/bcs-cover.jpg&quot;);border-style: none;filter: saturate(100%);">
-            <div class="text">
-                <h1>BCS Card</h1>
-            </div>
+            <div class="text"><img src="assets/img/IMG_1350.png" width="80%"></div>
         </section>
-        <section class="clean-block clean-info dark" style="text-align: center;background: #f6f6f6;">
+        <section class="clean-block clean-info dark" style="text-align: center;background: #f6f6f6;padding: 0px 0px 1px;">
             <div class="container">
-                <div class="block-heading">
-                    <h2 class="text-info" style="color: #3d566e;"></h2>
-                    <h1 style="color: #3d566e;"></h1>
-                    <p></p>
-                </div><!-- Start: Highlight Phone -->
-                <section class="highlight-phone" style="background: #f6f6f6;">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-md-8">
-                                <!-- Start: Intro -->
-                                <div class="intro">
-                                    <h2>What is BCS Card?</h2>
-                                    <p>BCS Cards can be shared via QR code, link, and more.</p>
-                                </div><!-- End: Intro -->
-                            </div>
-                            <div class="col-sm-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" class="device" src="assets/img/share.png" style="width: 100%;"></div>
-                        </div>
-                    </div>
-                </section><!-- End: Highlight Phone -->
-            </div><!-- Start: 1 Row 3 Columns -->
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/connect.png" style="width: 100%;">
-                        <h3>Who can share my card?</h3>
-                        <p>Anyone with the QR code or link can share your card.</p>
-                    </div>
-                    <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/contactcard.png" style="width: 100%;">
-                        <h3>Do I have a profile page?</h3>
-                        <p>Yes! Your profile page is where your contact card is stored and where your links reside.</p>
-                    </div>
-                    <div class="col-md-4"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/data.png" style="width: 100%;">
-                        <h3>What about privacy?</h3>
-                        <p>We collect very little data, and this data never includes IP addresses.</p>
-                    </div>
+                <div class="block-heading" style="padding: 20px 0px 0px;"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/newspaper.png" style="width: 250px;">
+                    <h1>Press Center</h1>
+                    <p>Sometimes people want to write about Borg Creative Studios, LLC so here are few things to help.</p>
+                    <h5 style="margin-top: 25px;">Press Releases</h5>
+                    <p>Right now there are not any releases. However, you can sign up for our press mailing list</p>
+                    <p><a href="https://cloud.borgcreative.com/survey/index.php/933614?newtest=Y&amp;lang=en" target="_blank">Sign Up</a></p>
                 </div>
-            </div><!-- End: 1 Row 3 Columns -->
-            <!-- Start: Contact Form Clean -->
-            <section class="contact-clean" style="background: #fff;">
-                <!-- Start: BCS Form -->
-                <div class="container" style="width: 75%;background: #fff;border-radius: 3px;border: 1px groove rgb(222,222,222);"><div>
-
-<iframe src="https://cloud.borgcreative.com/survey/index.php/529968?newtest=Y&lang=en" width="100%" height="500"
-    frameborder="0" marginheight="0" marginwidth="0" title="BCS Card Setup"></iframe>
-
-</div>
-                    <p><a href="https://cloud.borgcreative.com/survey/index.php/529968?newtest=Y&amp;lang=en" target="_blank">Open form in tab</a></p>
-                </div><!-- End: BCS Form -->
-            </section><!-- End: Contact Form Clean -->
+            </div>
         </section>
     </main>
     <section class="clean-block about-us" style="padding: 0px 0px 0px;">
