--- a/privacy.html
+++ b/privacy.html
@@ -165,27 +165,44 @@
         </section>
     </main>
     <section class="clean-block about-us" style="padding: 0px 0px 0px;">
-        <!-- Start: Footer Basic -->
-        <footer class="footer-basic">
-            <!-- Start: Social Icons -->
-            <div class="social"><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://www.instagram.com/borgcreativestudios/" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-instagram"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://twitter.com/borgcreative" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-twitter"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://www.minds.com/borgcreative/" target="_blank" style="border-radius: 5px;"><i class="icon ion-ios-lightbulb"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://gamejolt.com/@borgcreative" target="_blank" style="border-radius: 5px;"><i class="icon ion-ios-bolt"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://www.facebook.com/borgcreativestudios/" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-facebook"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://www.gettr.com/user/borgcreative" target="_blank" style="border-radius: 5px;"><i class="icon ion-fireball"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://codeberg.org/Borg-Creative-Studios" target="_blank" style="border-radius: 5px;"><i class="icon ion-code"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://github.com/Borg-Creative-Studios" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-github"></i></a></div><!-- End: Social Icons -->
-            <div class="d-md-flex justify-content-md-center align-items-md-center"><center>
-    <img src="https://api.thegreenwebfoundation.org/greencheckimage/www.borgcreative.com?nocache=true" alt="This website is hosted Green - checked by thegreenwebfoundation.org">
-
-</center>
-
-</div><!-- Start: Links -->
-            <ul class="list-inline">
-                <li class="list-inline-item"><a href="index.html">Home</a></li>
-                <li class="list-inline-item"><a href="services.html">Services</a></li>
-                <li class="list-inline-item"><a href="https://open.borgcreative.com/projects.html" target="_blank">Open Source</a></li>
-                <li class="list-inline-item"><a href="about.html">About</a></li>
-                <li class="list-inline-item"><a href="accountterms.html">Terms</a></li>
-                <li class="list-inline-item"><a href="privacy.html">Privacy Policy</a></li>
-            </ul><!-- End: Links -->
-            <!-- Start: Copyright -->
-            <p class="copyright">Borg Creative Studios, LLC © 2021</p><!-- End: Copyright -->
-        </footer><!-- End: Footer Basic -->
+        <!-- Start: Footer Clean -->
+        <footer class="footer-clean">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <!-- Start: Services -->
+                    <div class="col-sm-4 col-md-3 item">
+                        <h3>Services</h3>
+                        <ul>
+                            <li><a href="softwareproducts.html">Software</a></li>
+                            <li><a href="webproducts.html">Web</a></li>
+                            <li><a href="services.html">Business</a></li>
+                        </ul>
+                    </div><!-- End: Services -->
+                    <!-- Start: About -->
+                    <div class="col-sm-4 col-md-3 item">
+                        <h3>About</h3>
+                        <ul>
+                            <li><a href="about.html">Company</a></li>
+                            <li><a href="press.html">Press Center</a></li>
+                            <li><a href="https://open.borgcreative.com/projects.html" target="_blank">Open Source</a></li>
+                        </ul>
+                    </div><!-- End: About -->
+                    <!-- Start: Careers -->
+                    <div class="col-sm-4 col-md-3 item">
+                        <h3>Policy</h3>
+                        <ul>
+                            <li><a href="accountterms.html">Terms &amp; Conditions</a></li>
+                            <li><a href="privacy.html">Privacy Policy</a></li>
+                            <li><a href="values.html">Values</a></li>
+                        </ul>
+                    </div><!-- End: Careers -->
+                    <!-- Start: Social Icons -->
+                    <div class="col-lg-3 item social"><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://www.instagram.com/borgcreativestudios/" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-instagram"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://twitter.com/borgcreative" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-twitter"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://www.minds.com/borgcreative/" target="_blank" style="border-radius: 5px;"><i class="icon ion-ios-lightbulb"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://gamejolt.com/@borgcreative" target="_blank" style="border-radius: 5px;"><i class="icon ion-ios-bolt"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://www.facebook.com/borgcreativestudios/" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-facebook"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://www.gettr.com/user/borgcreative" target="_blank" style="border-radius: 5px;"><i class="icon ion-fireball"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://codeberg.org/Borg-Creative-Studios" target="_blank" style="border-radius: 5px;"><i class="icon ion-code"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://github.com/Borg-Creative-Studios" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-github"></i></a>
+                        <p class="copyright">Borg Creative Studios, LLC © 2021</p>
+                    </div><!-- End: Social Icons -->
+                </div>
+            </div>
+        </footer><!-- End: Footer Clean -->
     </section>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
