--- a/values.html
+++ b/values.html
@@ -68,54 +68,85 @@
     </nav>
     <main class="page landing-page">
         <section data-bss-parallax-bg="true" class="clean-block clean-hero" style="color: rgba(0,0,0,0.31);background: url(&quot;assets/img/bcs-cover.jpg&quot;);border-style: none;filter: saturate(100%);">
-            <div class="text">
-                <h1 style="color: #fff;">Our Values</h1>
-            </div>
+            <div class="text"><img src="assets/img/IMG_1350.png" style="width: 70%;"></div>
         </section>
         <section class="clean-block clean-info dark" style="text-align: center;background: #f6f6f6;padding: 0px 0px 1px;">
             <div class="container">
                 <div class="block-heading" style="padding: 20px 0px 0px;"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/data.png" style="width: 250px;">
                     <h1>Privacy</h1>
-                    <p>These days, most companies harvest user data and sell or share it with their business partners. However, we will never do this. Your data is your data.</p><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/newspaper.png" style="width: 250px;">
-                    <h1>Politics Free</h1>
+                    <p>These days, most companies harvest user data and sell or share it with their business partners.&nbsp;</p>
+                    <p>This is wrong. These companies have no right to sell your data. Your data is yours, not ours. We will always respect your privacy.</p><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/newspaper.png" style="width: 250px;">
+                    <h1>Unbiased</h1>
                     <p>We will not utilize our resources to share the political views of our staff. We as a company wish to remain impartial on the political stage.</p>
                     <p>Advertisements may be political, but these ads do not reflect our political believes.&nbsp;</p><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/people.png" style="width: 250px;">
                     <h1>Customer Care</h1>
-                    <p>We believe that every individual deserves great service and dignity. We will always work to make your experience with us a good one.</p>
+                    <p>We believe that every individual deserves great service and dignity. We will always work hard to make your experience with us a good one.</p>
                     <h2 class="text-info" style="color: #3d566e;"></h2>
                     <h1 style="color: #3d566e;"></h1>
                     <p></p>
                 </div>
             </div>
-            <div style="background: #849ea3;">
-                <h1 style="color: #fff;padding: 10px;">Life at BCS</h1>
-                <p style="padding: 10px;color: #fff;">We have many projects that we are currently working on, and you can follow the development of these projects by following the "LifeAtBCS" Twitter or blog!</p><!-- Start: Social Icons -->
-                <div class="social-icons" style="padding: 10px 0px 30px;background: #849ea3;"><a href="https://twitter.com/lifeatbcs" target="_blank"><i class="icon ion-social-twitter" style="color: #3d566e;"></i></a><a href="https://borgcreative.substack.com/" target="_blank"><i class="icon ion-chatbubble-working" style="color: #3d566e;"></i></a></div><!-- End: Social Icons -->
-            </div>
-        </section>
-    </main>
-    <section class="clean-block about-us" style="padding: 0px 0px 0px;">
-        <!-- Start: Footer Basic -->
-        <footer class="footer-basic">
-            <!-- Start: Social Icons -->
-            <div class="social"><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://www.instagram.com/borgcreativestudios/" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-instagram"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://twitter.com/borgcreative" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-twitter"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://www.minds.com/borgcreative/" target="_blank" style="border-radius: 5px;"><i class="icon ion-ios-lightbulb"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://gamejolt.com/@borgcreative" target="_blank" style="border-radius: 5px;"><i class="icon ion-ios-bolt"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://www.facebook.com/borgcreativestudios/" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-facebook"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://www.gettr.com/user/borgcreative" target="_blank" style="border-radius: 5px;"><i class="icon ion-fireball"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://codeberg.org/Borg-Creative-Studios" target="_blank" style="border-radius: 5px;"><i class="icon ion-code"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://github.com/Borg-Creative-Studios" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-github"></i></a></div><!-- End: Social Icons -->
-            <div class="d-md-flex justify-content-md-center align-items-md-center"><center>
+            <div style="background: #5bbf21;">
+                <h1 style="color: #fff;padding: 10px;">Environment at BCS</h1>
+                <figure>
+                    <blockquote class="blockquote">
+                        <p class="mb-0" style="color: rgb(255,255,255);">‘Do not pollute the land where you are. Bloodshed pollutes the land, and<br> atonement cannot be made for the land on which blood has been shed, <br>except by the blood of the one who shed it.<br></p>
+                    </blockquote>
+                    <figcaption class="blockquote-footer" style="color: rgb(255,255,255);">Numbers 35:33 (NIV)</figcaption>
+                </figure>
+                <p style="padding: 10px;color: #fff;">While Borg Creative Studios is not a "religious" company, we (the Borg family) are Christian. Because of this, we apply many Biblical standards to how we operate, and this includes being good stewards of the world that God created.</p><center>
     <img src="https://api.thegreenwebfoundation.org/greencheckimage/www.borgcreative.com?nocache=true" alt="This website is hosted Green - checked by thegreenwebfoundation.org">
 
 </center>
 
-</div><!-- Start: Links -->
-            <ul class="list-inline">
-                <li class="list-inline-item"><a href="index.html">Home</a></li>
-                <li class="list-inline-item"><a href="services.html">Services</a></li>
-                <li class="list-inline-item"><a href="https://open.borgcreative.com/projects.html" target="_blank">Open Source</a></li>
-                <li class="list-inline-item"><a href="about.html">About</a></li>
-                <li class="list-inline-item"><a href="accountterms.html">Terms</a></li>
-                <li class="list-inline-item"><a href="privacy.html">Privacy Policy</a></li>
-            </ul><!-- End: Links -->
-            <!-- Start: Copyright -->
-            <p class="copyright">Borg Creative Studios, LLC © 2021</p><!-- End: Copyright -->
-        </footer><!-- End: Footer Basic -->
+
+            </div>
+            <div style="background: #849ea3;">
+                <h1 style="color: #fff;padding: 10px;">Life at BCS</h1>
+                <p style="padding: 10px;color: #fff;">We have many projects that we are currently working on, and you can follow the development of these projects by following the "LifeAtBCS" Twitter!</p><!-- Start: Social Icons -->
+                <div class="social-icons" style="padding: 10px 0px 30px;background: #849ea3;"><a href="https://twitter.com/lifeatbcs" target="_blank"><i class="icon ion-social-twitter" style="color: #3d566e;"></i></a><a href="https://borgcreative.substack.com/" target="_blank"></a></div><!-- End: Social Icons -->
+            </div>
+        </section>
+    </main>
+    <section class="clean-block about-us" style="padding: 0px 0px 0px;">
+        <!-- Start: Footer Clean -->
+        <footer class="footer-clean">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <!-- Start: Services -->
+                    <div class="col-sm-4 col-md-3 item">
+                        <h3>Services</h3>
+                        <ul>
+                            <li><a href="softwareproducts.html">Software</a></li>
+                            <li><a href="webproducts.html">Web</a></li>
+                            <li><a href="services.html">Business</a></li>
+                        </ul>
+                    </div><!-- End: Services -->
+                    <!-- Start: About -->
+                    <div class="col-sm-4 col-md-3 item">
+                        <h3>About</h3>
+                        <ul>
+                            <li><a href="about.html">Company</a></li>
+                            <li><a href="press.html">Press Center</a></li>
+                            <li><a href="https://open.borgcreative.com/projects.html" target="_blank">Open Source</a></li>
+                        </ul>
+                    </div><!-- End: About -->
+                    <!-- Start: Careers -->
+                    <div class="col-sm-4 col-md-3 item">
+                        <h3>Policy</h3>
+                        <ul>
+                            <li><a href="accountterms.html">Terms &amp; Conditions</a></li>
+                            <li><a href="privacy.html">Privacy Policy</a></li>
+                            <li><a href="values.html">Values</a></li>
+                        </ul>
+                    </div><!-- End: Careers -->
+                    <!-- Start: Social Icons -->
+                    <div class="col-lg-3 item social"><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://www.instagram.com/borgcreativestudios/" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-instagram"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://twitter.com/borgcreative" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-twitter"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://www.minds.com/borgcreative/" target="_blank" style="border-radius: 5px;"><i class="icon ion-ios-lightbulb"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://gamejolt.com/@borgcreative" target="_blank" style="border-radius: 5px;"><i class="icon ion-ios-bolt"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://www.facebook.com/borgcreativestudios/" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-facebook"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://www.gettr.com/user/borgcreative" target="_blank" style="border-radius: 5px;"><i class="icon ion-fireball"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://codeberg.org/Borg-Creative-Studios" target="_blank" style="border-radius: 5px;"><i class="icon ion-code"></i></a><a data-bss-disabled-mobile="true" data-bss-hover-animate="rubberBand" href="https://github.com/Borg-Creative-Studios" target="_blank" style="border-radius: 5px;"><i class="icon ion-social-github"></i></a>
+                        <p class="copyright">Borg Creative Studios, LLC © 2021</p>
+                    </div><!-- End: Social Icons -->
+                </div>
+            </div>
+        </footer><!-- End: Footer Clean -->
     </section>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
