--- a/values.html
+++ b/values.html
@@ -72,18 +72,30 @@
         </section>
         <section class="clean-block clean-info dark" style="text-align: center;background: #f6f6f6;padding: 0px 0px 1px;">
             <div class="container">
-                <div class="block-heading" style="padding: 20px 0px 0px;"><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/data.png" style="width: 250px;">
-                    <h1>Privacy</h1>
-                    <p>These days, most companies harvest user data and sell or share it with their business partners.&nbsp;</p>
-                    <p>This is wrong. These companies have no right to sell your data. Your data is yours, not ours. We will always respect your privacy.</p><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/newspaper.png" style="width: 250px;">
-                    <h1>Unbiased</h1>
-                    <p>We will not utilize our resources to share the political views of our staff. We as a company wish to remain impartial on the political stage.</p>
-                    <p>Advertisements may be political, but these ads do not reflect our political believes.&nbsp;</p><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/people.png" style="width: 250px;">
-                    <h1>Customer Care</h1>
-                    <p>We believe that every individual deserves great service and dignity. We will always work hard to make your experience with us a good one.</p>
-                    <h2 class="text-info" style="color: #3d566e;"></h2>
-                    <h1 style="color: #3d566e;"></h1>
-                    <p></p>
+                <div class="block-heading" style="padding: 20px 0px 0px;">
+                    <!-- Start: faith -->
+                    <div><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/people2.png" style="width: 250px;">
+                        <h1>Our Faith</h1>
+                        <p>We are a family owned and operated company, and we are Christian. We do not discriminate against people for their faith. We believe, in accordance with the Bible (Matthew 7:1-5), that discrimination and judgement of each other is wrong.</p>
+                        <p>We do our best to conduct business in a manner that follows the Bible's commands and honors God. This means that we do our best to be honest, respectful, caring, and diligent in everything that we do.</p>
+                    </div><!-- End: faith -->
+                    <!-- Start: Politically unbiased -->
+                    <div><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/newspaper.png" style="width: 250px;">
+                        <h1>Politically Unbiased</h1>
+                        <p>We will not utilize our resources to share the political views of our staff. We as a company wish to remain impartial on the political stage.</p>
+                        <p>Advertisements may be political, but these ads do not reflect our political believes.&nbsp;</p>
+                    </div><!-- End: Politically unbiased -->
+                    <!-- Start: Privacy -->
+                    <div><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/data.png" style="width: 250px;">
+                        <h1>Privacy</h1>
+                        <p>These days, most companies harvest user data and sell or share it with their business partners.&nbsp;</p>
+                        <p>This is wrong. These companies have no right to sell your data. Your data is yours, not ours. We will always respect your privacy.</p>
+                    </div><!-- End: Privacy -->
+                    <!-- Start: Customer care -->
+                    <div><img data-bss-disabled-mobile="true" data-bss-hover-animate="pulse" src="assets/img/chat.png" style="width: 250px;">
+                        <h1>Customer Care</h1>
+                        <p>We believe that every individual deserves great service and dignity. We will always work hard to make your experience with us a good one.</p>
+                    </div><!-- End: Customer care -->
                 </div>
             </div>
             <div style="background: #5bbf21;">
@@ -94,17 +106,12 @@
                     </blockquote>
                     <figcaption class="blockquote-footer" style="color: rgb(255,255,255);">Numbers 35:33 (NIV)</figcaption>
                 </figure>
-                <p style="padding: 10px;color: #fff;">While Borg Creative Studios is not a "religious" company, we (the Borg family) are Christian. Because of this, we apply many Biblical standards to how we operate, and this includes being good stewards of the world that God created.</p><center>
+                <p style="padding: 10px;color: #fff;">Borg Creative Studios is a Christian company. Because of this, we apply many Biblical standards to how we operate, and this includes being good stewards of the world that God created.</p><center>
     <img src="https://api.thegreenwebfoundation.org/greencheckimage/www.borgcreative.com?nocache=true" alt="This website is hosted Green - checked by thegreenwebfoundation.org">
 
 </center>
 
 
-            </div>
-            <div style="background: #849ea3;">
-                <h1 style="color: #fff;padding: 10px;">Life at BCS</h1>
-                <p style="padding: 10px;color: #fff;">We have many projects that we are currently working on, and you can follow the development of these projects by following the "LifeAtBCS" Twitter!</p><!-- Start: Social Icons -->
-                <div class="social-icons" style="padding: 10px 0px 30px;background: #849ea3;"><a href="https://twitter.com/lifeatbcs" target="_blank"><i class="icon ion-social-twitter" style="color: #3d566e;"></i></a><a href="https://borgcreative.substack.com/" target="_blank"></a></div><!-- End: Social Icons -->
             </div>
         </section>
     </main>
