Updated SEO and disabled the welcome banner

--- a/webproducts.html
+++ b/webproducts.html
@@ -7,7 +7,7 @@
     <title>Web Products</title>
     <meta name="theme-color" content="#fff">
     <meta property="og:image" content="assets/img/BCS_twitter.jpg">
-    <meta name="twitter:image" content="assets/img/IMG_1347.jpg">
+    <meta name="twitter:image" content="assets/img/Image%2031.jpg">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Borg Creative Studios">
     <meta property="og:type" content="website">
