--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Home</title>
     <meta name="theme-color" content="#fff">
     <meta property="og:image" content="assets/img/BCS_twitter.jpg">
-    <meta name="twitter:image" content="assets/img/IMG_1347.jpg">
+    <meta name="twitter:image" content="assets/img/Image%2031.jpg">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Borg Creative Studios">
     <meta property="og:type" content="website">
@@ -68,12 +68,6 @@
     </nav>
     <main class="page landing-page" style="background: linear-gradient(#1F1E2C, #1A1A1A);">
         <section>
-            <!-- Start: Welcome banner -->
-            <div style="padding-top: 30px;background: url(&quot;assets/img/samuel-branch-ZPVisr0s_hQ-unsplash.jpg&quot;) center / cover;">
-                <div class="text-center">
-                    <h2 class="text-white">Thank you veterans for your service.</h2><img src="assets/img/IMG_1547.png" style="min-width: 250px;max-width: 70%;opacity: 0;" width="50%">
-                </div>
-            </div><!-- End: Welcome banner -->
             <!-- Start: web design -->
             <div style="padding-top: 30px;">
                 <div class="text-center">
