--- a/values.html
+++ b/values.html
@@ -102,9 +102,9 @@
                 <h1 style="color: #fff;padding: 10px;">Environment at BCS</h1>
                 <figure>
                     <blockquote class="blockquote">
-                        <p class="mb-0" style="color: rgb(255,255,255);">‘Do not pollute the land where you are. Bloodshed pollutes the land, and<br> atonement cannot be made for the land on which blood has been shed, <br>except by the blood of the one who shed it.<br></p>
+                        <p class="mb-0" style="color: rgb(255,255,255);">Then God said, “Let us make man&nbsp;in our image, after our likeness. And <br>let them have dominion over the fish of the sea and over the birds of <br>the heavens and over the livestock and over all the earth and over every<br> creeping thing that creeps on the earth.”<br></p>
                     </blockquote>
-                    <figcaption class="blockquote-footer" style="color: rgb(255,255,255);">Numbers 35:33 (NIV)</figcaption>
+                    <figcaption class="blockquote-footer" style="color: rgb(255,255,255);">Genesis 1:26 (NIV)</figcaption>
                 </figure>
                 <p style="padding: 10px;color: #fff;">Borg Creative Studios is a Christian company. Because of this, we apply many Biblical standards to how we operate, and this includes being good stewards of the world that God created.</p><center>
     <img src="https://api.thegreenwebfoundation.org/greencheckimage/www.borgcreative.com?nocache=true" alt="This website is hosted Green - checked by thegreenwebfoundation.org">
